[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ps5video"
version = "0.1.0"
description = "Fix washed-out PS5 4K HDR WebM recordings for YouTube and PC playback."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
ps5video = "ps5video.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
